--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,3 @@
-/* ===========================================
-
-=========================================== */
+@import 'setup.scss';
+@import 'home.scss';
+@import 'media.scss';
