--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -11,6 +11,12 @@ body {
     padding: 0;
 }
 
+.wrapper {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1200px;
+}
+
 img {
     display: block;
     width: 100%;
@@ -20,19 +26,35 @@ ul {
     margin: 0;
     padding: 0;
 }
+
 li {
     list-style: none;
     text-decoration: none;
 }
 
-.wrapper {
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1200px;
+button {
+    border: none;
+    padding: 10px;
 }
+
+.chosen {
+    background-color: rgba(115, 235, 79, 0.5);
+}
+
+.hidden {
+    opacity: 0;
+    height: 0;
+}
+    
+
 /* ===========================================
 HEADER
 =========================================== */
+
+/* ===========================================
+MENU
+=========================================== */
+
 
 /* ===========================================
 GALLERY
@@ -41,9 +63,26 @@ GALLERY
 .galleryList {
     display: flex;
     justify-content: space-between;
-    .galleryItem {
-        width: 30%;
+    flex-wrap: wrap;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // justify-content: space-between;
+    // align-items: center;
+    li {
+        width: calc(100% / 3);
+        padding: 0;
+        img {
+            height: auto;
+        }
     }
 }
 
+// * {
+//     border: 1px solid red;
+// }
+
+
+
+
+        
 
