--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -34,12 +34,17 @@ li {
 
 button {
     border: none;
+    border-radius: 10px;
     padding: 10px;
+    background-color: rgba(128, 186, 240, 0.5);
+    box-shadow: inset 0px 0px 5px 2px rgba(128, 186, 240, 1);
 }
 
 .chosen {
     background-color: rgba(115, 235, 79, 0.5);
 }
+
+
 
 .hidden {
     opacity: 0;
@@ -55,7 +60,11 @@ HEADER
 /* ===========================================
 MENU
 =========================================== */
-
+.genreList {
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
 
 /* ===========================================
 GALLERY
