--- a/styles/style.css
+++ b/styles/style.css
@@ -246,7 +246,8 @@ body {
 
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 ul {
@@ -271,7 +272,6 @@ button {
 .hidden {
   opacity: 0;
   height: 0;
-  visibility: hidden;
 }
 
 /* ===========================================
@@ -283,20 +283,19 @@ MENU
 /* ===========================================
 GALLERY
 =========================================== */
-.galleryList {
+.movieGallery ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
-.galleryList li {
-  width: calc(100% / 3);
-  padding: 0;
-}
-.galleryList li img {
-  height: auto;
+.movieGallery li {
+  max-width: 33%;
 }
