--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -9,6 +9,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    background-color: rgba(172, 202, 214, 0.39);
 }
 
 .wrapper {
@@ -81,6 +82,8 @@ GALLERY
 =========================================== */
 
 .movieGallery {
+    transition: opacity 0.3s ease-out;
+    opacity: 0;
     ul{
         display: flex;
         flex-wrap: wrap;
@@ -90,9 +93,22 @@ GALLERY
 
     li {
         max-width: calc(30% - 20px);
+        img{
+            box-shadow: 0px 0px 3px 5px #000000;
+        }
     }
 }
 
-* {
-    border: 1px solid red;
+.summaryCard {
+    transition: opacity 0.3s ease-out;
+    opacity: 0;
 }
+
+.unhidden {
+    opacity: 1;
+}
+
+// * {
+//     border: 1px solid red;
+// }
+
