added js functionality and movie summary on hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -332,18 +332,37 @@ GALLERY
   transition: opacity 0.3s ease-out;
   opacity: 0;
 }
+.movieGallery .movie {
+  position: relative;
+}
+.movieGallery .movie:hover {
+  cursor: pointer;
+}
+.movieGallery .summary {
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+.movieGallery .summary:hover {
+  opacity: 1;
+}
 .movieGallery ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  padding-top: 5%;
 }
 .movieGallery li {
   max-width: calc(30% - 20px);
@@ -351,12 +370,6 @@ GALLERY
 .movieGallery li img {
   -webkit-box-shadow: 0px 0px 3px 5px #000000;
           box-shadow: 0px 0px 3px 5px #000000;
-}
-
-.summaryCard {
-  -webkit-transition: opacity 0.3s ease-out;
-  transition: opacity 0.3s ease-out;
-  opacity: 0;
 }
 
 .unhidden {
