--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -86,11 +86,34 @@ GALLERY
 .movieGallery {
     transition: opacity 0.3s ease-out;
     opacity: 0;
+    .movie {
+        position: relative;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+    
+    .summary {
+        transition: opacity 0.3s ease-out;
+        opacity: 0;
+        background-color: rgba($color: #000000, $alpha: 0.7);
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        &:hover{
+            opacity: 1;
+        }
+
+        
+    }
+
     ul{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: baseline;
+        padding-top: 5%;
     }
 
     li {
@@ -99,11 +122,6 @@ GALLERY
             box-shadow: 0px 0px 3px 5px #000000;
         }
     }
-}
-
-.summaryCard {
-    transition: opacity 0.3s ease-out;
-    opacity: 0;
 }
 
 .unhidden {
