--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,6 @@
 @import 'setup.scss';
 @import 'home.scss';
+@import 'general.scss';
+@import 'menu.scss';
+@import 'gallery.scss';
 @import 'media.scss';
