--- a/styles/style.css
+++ b/styles/style.css
@@ -236,12 +236,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: rgba(249, 211, 211, 0.76);
-}
-
-h1 {
-  margin: 0;
-  padding: 0;
+  background-color: rgba(172, 202, 214, 0.39);
 }
 
 .wrapper {
@@ -268,43 +263,15 @@ li {
 
 button {
   border: none;
-  outline: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   padding: 10px;
-  background-color: rgba(235, 158, 108, 0.27);
-  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
-          box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
-}
-
-.yearItem {
-  padding: 10px;
-  outline: 1px solid rgba(0, 0, 0, 0.3);
-  background-color: rgba(235, 158, 108, 0.27);
-  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
-          box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
-  border-radius: 10px;
-  text-align: center;
-}
-
-.yearBox {
-  width: 30%;
-  margin: 3%;
-  text-align: center;
-}
-
-.yearList {
-  border-radius: 10px;
-  overflow: hidden;
-  -webkit-transition: max-height 0.3s ease-out;
-  transition: max-height 0.3s ease-out;
-  max-height: 0;
+  background-color: rgba(128, 186, 240, 0.5);
+  -webkit-box-shadow: inset 0px 0px 5px 2px #80baf0;
+          box-shadow: inset 0px 0px 5px 2px #80baf0;
 }
 
 .chosen {
-  background: rgba(253, 29, 29, 0.5);
-  color: white;
-  -webkit-box-shadow: inset 0px 0px 5px 2px #ef5858;
-          box-shadow: inset 0px 0px 5px 2px #ef5858;
+  background-color: rgba(115, 235, 79, 0.5);
 }
 
 /* ===========================================
@@ -348,9 +315,206 @@ MENU
       -ms-flex-pack: center;
           justify-content: center;
   margin: 20px 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.3s ease-out;
+  transition: max-height 0.3s ease-out;
+  max-height: 0;
 }
 .genreList li {
   margin: 5px;
+}
+
+/* ===========================================
+GALLERY
+=========================================== */
+.movieGallery {
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+  opacity: 0;
+}
+.movieGallery .movie {
+  position: relative;
+}
+.movieGallery .movie:hover {
+  cursor: pointer;
+}
+.movieGallery .summary {
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+.movieGallery .summary:hover {
+  opacity: 1;
+}
+.movieGallery ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  padding-top: 5%;
+}
+.movieGallery li {
+  max-width: calc(30% - 20px);
+}
+.movieGallery li img {
+  -webkit-box-shadow: 0px 0px 3px 5px #000000;
+          box-shadow: 0px 0px 3px 5px #000000;
+}
+
+.unhidden {
+  opacity: 1;
+}
+
+/* ===========================================
+GENERAL STYLINGS
+=========================================== */
+html {
+  font-size: 125%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgba(249, 211, 211, 0.76);
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgba(128, 186, 240, 0.5);
+  -webkit-box-shadow: inset 0px 0px 5px 2px #80baf0;
+          box-shadow: inset 0px 0px 5px 2px #80baf0;
+}
+
+.chosen {
+  background-color: rgba(115, 235, 79, 0.5);
+}
+
+/* ===========================================
+MENU
+=========================================== */
+.movieMenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.movieMenu .genreBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.genreList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 20px 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.3s ease-out;
+  transition: max-height 0.3s ease-out;
+  max-height: 0;
+}
+.genreList li {
+  margin: 5px;
+}
+
+button {
+  border: none;
+  outline: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgba(235, 158, 108, 0.27);
+  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
+          box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
+}
+
+.yearItem {
+  padding: 10px;
+  outline: 1px solid rgba(0, 0, 0, 0.3);
+  background-color: rgba(235, 158, 108, 0.27);
+  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
+          box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.yearBox {
+  width: 30%;
+  margin: 3%;
+  text-align: center;
+}
+
+.yearList {
+  border-radius: 10px;
+  overflow: hidden;
+  -webkit-transition: max-height 0.3s ease-out;
+  transition: max-height 0.3s ease-out;
+  max-height: 0;
+}
+
+.chosen {
+  background: rgba(253, 29, 29, 0.5);
+  color: white;
+  -webkit-box-shadow: inset 0px 0px 5px 2px #ef5858;
+          box-shadow: inset 0px 0px 5px 2px #ef5858;
 }
 
 .searchBox {
@@ -367,7 +531,7 @@ MENU
 
 /* ===========================================
 GALLERY
-=========================================== */
+============================================ */
 .movieGallery {
   -webkit-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
