--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -22,6 +22,10 @@ GALLERY
         top: 0;
         height: 100%;
         width: 100%;
+        overflow: auto;
+        // &::-webkit-scrollbar {
+        //     display: none;
+        // }
         &:hover{
             opacity: 1;
         }
@@ -29,8 +33,8 @@ GALLERY
         p {
             color: rgb(255, 255, 255, 0.7);
             padding: 10%;
+            
         }
-
     }
 
     ul{
@@ -53,6 +57,6 @@ GALLERY
     opacity: 1;
 }
 
-* {
-    outline: 1px solid red;
-}
+// * {
+//     outline: 1px solid red;
+// }
