--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -7,22 +7,23 @@ html {
 }
 
 body {
+    font-family: $secondary-font;
     margin: 0;
     padding: 0;
-    background-color: rgba(249, 211, 211, 76%);
+    background-color: $primary-color;
 }
 
-h1{
+
+h1, h2 {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
-
 .wrapper {
     margin: 0 auto;
     width: 90%;
     max-width: 1200px;
 }
-
 img {
     display: block;
     max-width: 100%;
@@ -39,14 +40,22 @@ li {
     text-decoration: none;
 }
 
+a {
+    text-decoration: none;
+}
+
+
 button {
     border: none;
+    // outline: 1px solid rgba(0 ,0, 0, 0.3);
     border-radius: 10px;
     padding: 10px;
-    background-color: rgba(128, 186, 240, 0.5);
-    box-shadow: inset 0px 0px 5px 2px rgba(128, 186, 240, 1);
+    background-color: rgb(235 158 108 / 27%);
+    box-shadow: inset 0px 0px 5px 2px rgb(231 125 47 / 78%);
 }
 
 .chosen {
-    background-color: rgba(115, 235, 79, 0.5);
+    background-color: rgba(253, 29, 29, 0.5);
+    box-shadow: inset 0px 0px 5px 2px #ef5858;
+    color: whitesmoke;
 }
