--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -11,56 +11,20 @@ MENU
         flex-direction: column;
         align-items: center;
     }
+    h2 {
+        color: $secondary-color;
+        letter-spacing: 2px;
+    }
 }
 .genreList {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    max-height: 0;
+
     li {
         margin: 5px;
     }
-}
-
-button {
-    border: none;
-    outline: 1px solid rgba(0 ,0, 0, 0.3);
-    border-radius: 10px;
-    padding: 10px;
-    background-color: rgb(235 158 108 / 27%);
-    box-shadow: inset 0px 0px 5px 2px rgb(231 125 47 / 78%);
-}
-
-.yearItem {
-    padding: 10px;
-    outline: 1px solid rgba(0 ,0, 0, 0.3);
-    background-color: rgb(235 158 108 / 27%);
-    box-shadow: inset 0px 0px 5px 2px rgb(231 125 47 / 78%);
-    border-radius: 10px;
-    text-align: center;
-}
-
-.yearBox {
-    width: 30%;
-    margin: 3%;
-    text-align: center;
-}
-
-.yearList {
-    border-radius: 10px;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    max-height: 0;
-}
-
-.chosen {
-    // background: linear-gradient(141deg, rgba(131,58,180,0.5) 0%, rgba(253,29,29,0.5) 50%, rgba(252,176,69,0.5) 100%);
-    background: rgba(253, 29, 29, 0.5);
-    color: white;
-    box-shadow: inset 0px 0px 5px 2px #ef5858;
 }
 
 .searchBox {
@@ -69,3 +33,30 @@ button {
     align-items: center;
     width: 80%;
 }
+
+.yearBox {
+    width: 30%;
+    margin: 3%;
+    text-align: center;
+}
+
+// .yearItem {
+//     padding: 10px;
+//     outline: 1px solid rgba(0 ,0, 0, 0.3);
+//     background-color: rgb(235 158 108 / 27%);
+//     box-shadow: inset 0px 0px 5px 2px rgb(231 125 47 / 78%);
+//     border-radius: 10px;
+//     text-align: center;
+//     // background-color: rgba(253, 29, 29, 0.5);
+// }
+
+.yearList {
+    border-radius: 10px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+    max-height: 0;
+    button {
+        width: 100%;
+    }
+}
+
