--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,8 @@
 @import 'setup.scss';
-@import 'home.scss';
+@import 'variables.scss';
 @import 'general.scss';
+@import 'header.scss';
 @import 'menu.scss';
 @import 'gallery.scss';
+@import 'footer.scss';
 @import 'media.scss';
