Cleaning up some JS functions and adding more stylings and ratings for movies.

--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,19 @@ body {
   background-color: #f7d6d6;
 }
 
-h1, h2 {
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+.appContainer {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+
+h1, h3 {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
@@ -272,8 +284,14 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin: 0;
+}
+
 button {
+  cursor: pointer;
   border: none;
+  outline: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   padding: 10px;
   background-color: rgba(235, 158, 108, 0.27);
@@ -337,9 +355,10 @@ MENU
       -ms-flex-align: center;
           align-items: center;
 }
-.movieMenu h2 {
+.movieMenu h3 {
   color: #c1082bd9;
   letter-spacing: 2px;
+  font-size: 1.5rem;
 }
 
 .genreList {
@@ -404,25 +423,39 @@ GALLERY
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: opacity 0.3s ease-out;
-  transition: opacity 0.3s ease-out;
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: absolute;
   top: 0;
   height: 100%;
   width: 100%;
-  overflow: auto;
+  -webkit-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  overflow: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.movieGallery .summary::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 .movieGallery .summary:hover {
   opacity: 1;
 }
+.movieGallery .summary .moreInfo {
+  background-color: whitesmoke;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
 .movieGallery .summary p {
   color: rgba(255, 255, 255, 0.7);
   padding: 10%;
+  max-height: 100%;
 }
 .movieGallery ul {
   display: -webkit-box;
@@ -432,17 +465,25 @@ GALLERY
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  padding-top: 5%;
 }
 .movieGallery li {
-  max-width: calc(30% - 20px);
+  max-width: 30%;
 }
 .movieGallery li img {
-  -webkit-box-shadow: 0px 0px 3px 5px #000000;
-          box-shadow: 0px 0px 3px 5px #000000;
+  -webkit-box-shadow: 0px 0px 3px 3px #000;
+          box-shadow: 0px 0px 3px 3px #000;
+}
+.movieGallery li .titleContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5% 0;
 }
 
 .unhidden {
@@ -460,15 +501,11 @@ FOOTER
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   background-color: #c1082bd9;
+  padding: 1%;
 }
 .footerContainer p, .footerContainer a {
+  text-align: center;
   color: #f7d6d6;
   letter-spacing: 1px;
 }
