--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -5,10 +5,10 @@ FOOTER
 .footerContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: $secondary-color;
+    padding: 1%;
     p, a {
+        text-align: center;
         color: $primary-color;
         letter-spacing: 1px;
     }
