--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -14,49 +14,74 @@ GALLERY
     
     .summary {
         display: flex;
-        align-items: center;
-        transition: opacity 0.3s ease-out;
-        opacity: 0;
-        background-color: rgba($color: #000000, $alpha: 0.7);
+        flex-direction: column;
         position: absolute;
         top: 0;
         height: 100%;
         width: 100%;
-        overflow: auto;
-        // &::-webkit-scrollbar {
-        //     display: none;
-        // }
+
+        transition: opacity 0.5s ease-out;
+        opacity: 0;
+        background-color: rgba($color: #000000, $alpha: 0.7);
+
+        // To remove scrollbars for movie summaries 
+        overflow: scroll;
+        scrollbar-width: none; 
+        -ms-overflow-style: none;  
+        &::-webkit-scrollbar { 
+            width: 0;
+            height: 0;
+        }
+
         &:hover{
             opacity: 1;
+        }
+
+        .moreInfo {
+            background-color: whitesmoke;
+            height: fit-content;
         }
 
         p {
             color: rgb(255, 255, 255, 0.7);
             padding: 10%;
-            
+            max-height: 100%;
         }
     }
 
-    ul{
+    ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        align-items: baseline;
-        padding-top: 5%;
+        // align-items: baseline;
     }
 
     li {
-        max-width: calc(30% - 20px);
+        max-width: 30%;
+        
         img{
-            box-shadow: 0px 0px 3px 5px #000000;
+            box-shadow: 0px 0px 3px 3px #000;
         }
+        .titleContainer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 5% 0;
+        }
+        // .ratingContainer {
+        //     position: absolute;
+        //     display: flex;
+        //     align-items: center;
+        //     justify-content: center;
+        //     top: 2%;
+        //     right: 2%;
+        //     border-radius: 50%;
+        //     background-color: rgb(25, 129, 21);
+        //     padding: 5px;
+        // }
     }
 }
 
 .unhidden {
     opacity: 1;
 }
-
-// * {
-//     outline: 1px solid red;
-// }
