--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -13,17 +13,30 @@ body {
     background-color: $primary-color;
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+}
 
-h1, h2 {
+.appContainer {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 100%;;
+}
+
+h1, h3 {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
+
 .wrapper {
     margin: 0 auto;
     width: 90%;
     max-width: 1200px;
 }
+
 img {
     display: block;
     max-width: 100%;
@@ -44,10 +57,15 @@ a {
     text-decoration: none;
 }
 
+p {
+    margin: 0;
+}
+
 
 button {
+    cursor: pointer;
     border: none;
-    // outline: 1px solid rgba(0 ,0, 0, 0.3);
+    outline: 1px solid rgba(0 ,0, 0, 0.3);
     border-radius: 10px;
     padding: 10px;
     background-color: rgb(235 158 108 / 27%);
