--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -11,9 +11,10 @@ MENU
         flex-direction: column;
         align-items: center;
     }
-    h2 {
+    h3 {
         color: $secondary-color;
         letter-spacing: 2px;
+        font-size: 1.5rem;
     }
 }
 .genreList {
@@ -39,16 +40,6 @@ MENU
     margin: 3%;
     text-align: center;
 }
-
-// .yearItem {
-//     padding: 10px;
-//     outline: 1px solid rgba(0 ,0, 0, 0.3);
-//     background-color: rgb(235 158 108 / 27%);
-//     box-shadow: inset 0px 0px 5px 2px rgb(231 125 47 / 78%);
-//     border-radius: 10px;
-//     text-align: center;
-//     // background-color: rgba(253, 29, 29, 0.5);
-// }
 
 .yearList {
     border-radius: 10px;
