--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -4,13 +4,15 @@ GALLERY
 
 .movieGallery {
     transition: opacity 0.3s ease-out;
-    opacity: 0;
+    opacity: 1;
     .movie {
+        
         position: relative;
         &:hover {
             cursor: pointer;
         }
     }
+    
     
     .summary {
         display: flex;
@@ -49,39 +51,82 @@ GALLERY
         }
     }
 
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+    .galleryList {
+        margin: 3% 0 10%;
+        max-height: auto;
+        max-width: auto;
+        display: grid;
+        gap: 100px 2%;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        // flex-box version of the galleryList
+        
+        // display: flex;
+        // flex-wrap: wrap;
+        // justify-content: space-around;
         // align-items: baseline;
+        
+        .galleryItem {
+            // max-width: 30%;
+            width: 100%;
+            height: 100%;
+            .movieCard {
+                height: 100%;
+            }
+            .moviePoster {
+                box-shadow: 0px 0px 3px 3px #000;     
+                max-width: 100%;
+                display: block;
+                height: 100%;
+                object-fit: cover;
+            }
+            .title  {
+                text-align: center;
+                padding: 5%;
+            }
+        }
     }
 
-    li {
-        max-width: 30%;
-        
-        img{
-            box-shadow: 0px 0px 3px 3px #000;
-        }
-        .titleContainer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 5% 0;
-        }
-        // .ratingContainer {
-        //     position: absolute;
-        //     display: flex;
-        //     align-items: center;
-        //     justify-content: center;
-        //     top: 2%;
-        //     right: 2%;
-        //     border-radius: 50%;
-        //     background-color: rgb(25, 129, 21);
-        //     padding: 5px;
-        // }
+    
+    // li {
+    //     max-width: 30%;
+    //     height: 100%;
+    //     img{
+    //         box-shadow: 0px 0px 3px 3px #000;
+            
+    //     }
+    //     .moviePoster {
+    //         max-width: 100%;
+    //         display: block;
+            
+    //         object-fit: cover;
+    //     }
+    //     .titleContainer {
+    //         display: flex;
+    //         justify-content: space-between;
+    //         align-items: center;
+    //         margin: 5% 0;
+    //     }
+    //     // .ratingContainer {
+        //     //     position: absolute;
+        //     //     display: flex;
+        //     //     align-items: center;
+        //     //     justify-content: center;
+        //     //     border-radius: 50%;
+        //     //     background-color: rgb(25, 129, 21);
+        //     //     padding: 5px;
+        //     //     top: 2%;
+        //     //     right: 2%;
+    //     // }
+    // }
+
+    .movieCard {
+        display: grid;
+        grid-template-rows: 1fr auto;
     }
 }
 
 .unhidden {
     opacity: 1;
 }
+
