--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -22,32 +22,97 @@ MENU
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px 0;
-
     li {
         margin: 5px;
     }
 }
 
-.searchBox {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 80%;
+.searchButton {
+    width: 50%;
+    max-width: 360px;
 }
 
 .yearBox {
-    width: 30%;
+    width: 50%;
+    max-width: 360px;
     margin: 3%;
     text-align: center;
 }
 
 .yearList {
+    position: relative;
     border-radius: 10px;
-    overflow: hidden;
+    // overflow: hidden;
     transition: max-height 0.3s ease-out;
-    max-height: 0;
+    margin: 5% 0;
     button {
+        // background-color: $box-color;
         width: 100%;
+    }
+    .yearOptions {
+        // (235, 158, 108, 0.27)
+        visibility: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+        opacity: 0;
+        transition: all 0.5s;
+        &.open  {
+            opacity: 1;
+            visibility: visible;
+        }
+        // .chosen {
+        //     background-color: #f07a75;
+        //     box-shadow: inset 0px 0px 5px 2px #ef5858;
+        //     color: whitesmoke;
+        // }
     }
 }
 
+.advancedSearch {
+    margin: 3% 0;
+    width: 100%;
+    background: rgba($search-background-color, 0.2);
+    border-radius: 8px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+    max-height: 0;
+}
+.slideContainer {
+    width: 50%;
+    margin: 3% auto;
+    .slider {
+        border: 1px solid $secondary-color;
+        background: $primary-color;
+        width: 100%;
+        -webkit-appearance: none; 
+        appearance: none;
+        border-radius: 10px;  
+
+        // For Firefox
+        &::-moz-range-thumb {
+            border: 1px solid #000;
+            height: 30px;
+            width: 15px;
+            cursor: pointer;
+            border-radius: 3px;
+            background: rgba($secondary-color, 0.7);
+            box-shadow: 1px 1px 1px #000;
+        }
+
+        // For webkit
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            margin: -5px 0;
+            border: 1px solid #000;
+            height: 30px;
+            width: 15px;
+            cursor: pointer;
+            border-radius: 3px;
+            background: rgba($secondary-color, 0.7);
+            box-shadow: 1px 1px 1px #000;
+        }
+    }
+}
