--- a/styles/style.css
+++ b/styles/style.css
@@ -294,13 +294,13 @@ button {
   outline: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   padding: 10px;
-  background-color: rgba(235, 158, 108, 0.27);
+  background-color: #f0c7b7;
   -webkit-box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
           box-shadow: inset 0px 0px 5px 2px rgba(231, 125, 47, 0.78);
 }
 
 .chosen {
-  background-color: rgba(253, 29, 29, 0.5);
+  background-color: #f07a75;
   -webkit-box-shadow: inset 0px 0px 5px 2px #ef5858;
           box-shadow: inset 0px 0px 5px 2px #ef5858;
   color: whitesmoke;
@@ -376,33 +376,88 @@ MENU
   margin: 5px;
 }
 
-.searchBox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 80%;
+.searchButton {
+  width: 50%;
+  max-width: 360px;
 }
 
 .yearBox {
-  width: 30%;
+  width: 50%;
+  max-width: 360px;
   margin: 3%;
   text-align: center;
 }
 
 .yearList {
+  position: relative;
   border-radius: 10px;
+  -webkit-transition: max-height 0.3s ease-out;
+  transition: max-height 0.3s ease-out;
+  margin: 5% 0;
+}
+.yearList button {
+  width: 100%;
+}
+.yearList .yearOptions {
+  visibility: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.yearList .yearOptions.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.advancedSearch {
+  margin: 3% 0;
+  width: 100%;
+  background: rgba(255, 0, 0, 0.2);
+  border-radius: 8px;
   overflow: hidden;
   -webkit-transition: max-height 0.3s ease-out;
   transition: max-height 0.3s ease-out;
   max-height: 0;
 }
-.yearList button {
+
+.slideContainer {
+  width: 50%;
+  margin: 3% auto;
+}
+.slideContainer .slider {
+  border: 1px solid #c1082bd9;
+  background: #f7d6d6;
   width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  border-radius: 10px;
+}
+.slideContainer .slider::-moz-range-thumb {
+  border: 1px solid #000;
+  height: 30px;
+  width: 15px;
+  cursor: pointer;
+  border-radius: 3px;
+  background: rgba(193, 8, 43, 0.7);
+  box-shadow: 1px 1px 1px #000;
+}
+.slideContainer .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  margin: -5px 0;
+  border: 1px solid #000;
+  height: 30px;
+  width: 15px;
+  cursor: pointer;
+  border-radius: 3px;
+  background: rgba(193, 8, 43, 0.7);
+  -webkit-box-shadow: 1px 1px 1px #000;
+          box-shadow: 1px 1px 1px #000;
 }
 
 /* ===========================================
@@ -411,7 +466,7 @@ GALLERY
 .movieGallery {
   -webkit-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
-  opacity: 0;
+  opacity: 1;
 }
 .movieGallery .movie {
   position: relative;
@@ -457,33 +512,37 @@ GALLERY
   padding: 10%;
   max-height: 100%;
 }
-.movieGallery ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+.movieGallery .galleryList {
+  margin: 3% 0 10%;
+  max-height: auto;
+  max-width: auto;
+  display: grid;
+  gap: 100px 2%;
+  grid-template-columns: 1fr 1fr 1fr;
 }
-.movieGallery li {
-  max-width: 30%;
+.movieGallery .galleryList .galleryItem {
+  width: 100%;
+  height: 100%;
 }
-.movieGallery li img {
+.movieGallery .galleryList .galleryItem .movieCard {
+  height: 100%;
+}
+.movieGallery .galleryList .galleryItem .moviePoster {
   -webkit-box-shadow: 0px 0px 3px 3px #000;
           box-shadow: 0px 0px 3px 3px #000;
+  max-width: 100%;
+  display: block;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.movieGallery li .titleContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 5% 0;
+.movieGallery .galleryList .galleryItem .title {
+  text-align: center;
+  padding: 5%;
+}
+.movieGallery .movieCard {
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .unhidden {
