--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -4,6 +4,7 @@ HEADER
 
 header .wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     h1 {
@@ -11,6 +12,15 @@ header .wrapper {
         text-transform: uppercase;
         font-size: 5rem;
         font-weight: 400;
-        margin: 5%;
+        margin: 5% 0 0;
     }
-}
+    h2 {
+        font-family: 'Shadows Into Light', cursive;
+        font-weight: 400;
+        font-size: 2rem;
+        font-style: italic;
+        color:#ff0052;
+        text-align: center;
+        letter-spacing: 1px;
+    }
+} 
