--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -2,63 +2,61 @@
 GALLERY
 ============================================ */
 
+.summary {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    transition: opacity 0.5s ease-out;
+    opacity: 0;
+    padding: 10%;
+    background-color: rgba($color: #000000, $alpha: 0.7);
+    // To remove scrollbars for movie summaries 
+    overflow: scroll;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;  
+    &::-webkit-scrollbar { 
+        width: 0;
+        height: 0;
+    }
+    &:hover{
+        opacity: 1;
+    }
+
+    p {
+        color: whitesmoke;
+    }
+    .ratingContainer {
+        .rating {
+            display: inline-block;
+            border: 2px red solid;
+            border-radius: 50%;
+            padding: 4px;
+            &.good {
+                border-color: yellow;
+            }
+            &.great {
+                border-color: green;
+            }
+        }
+    }
+}
+
+
 .movieGallery {
-    transition: opacity 0.3s ease-out;
-    opacity: 1;
-    .movie {
-        
-        position: relative;
-        &:hover {
-            cursor: pointer;
-        }
-    }
-    
-    
-    .summary {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 0;
-        height: 100%;
-        width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-        transition: opacity 0.5s ease-out;
-        opacity: 0;
-        background-color: rgba($color: #000000, $alpha: 0.7);
-
-        // To remove scrollbars for movie summaries 
-        overflow: scroll;
-        scrollbar-width: none; 
-        -ms-overflow-style: none;  
-        &::-webkit-scrollbar { 
-            width: 0;
-            height: 0;
-        }
-
-        &:hover{
-            opacity: 1;
-        }
-
-        .moreInfo {
-            background-color: whitesmoke;
-            height: fit-content;
-        }
-
-        p {
-            color: rgb(255, 255, 255, 0.7);
-            padding: 10%;
-            max-height: 100%;
-        }
-    }
-
-    .galleryList {
-        margin: 3% 0 15%;
-        max-height: auto;
-        max-width: auto;
-        display: grid;
-        gap: 100px 2%;
-        grid-template-columns: 1fr 1fr 1fr;
-
+.galleryList {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 100px 2%;
+    margin: 3% 0 15%;
         // flex-box version of the galleryList
         
         // display: flex;
@@ -66,32 +64,45 @@ GALLERY
         // justify-content: space-around;
         // align-items: baseline;
         
-        .galleryItem {
-            // max-width: 30%;
-            width: 100%;
+    .galleryItem {
+        .movieCard {
+            display: grid;
+            grid-template-rows: 1fr auto;
             height: 100%;
-            .movieCard {
-                height: 100%;
-            }
-            .moviePoster {
-                box-shadow: 0px 0px 3px 3px #000;     
-                max-width: 100%;
-                display: block;
-                height: 100%;
-                object-fit: cover;
-            }
-            .title  {
-                text-align: center;
-                padding: 5%;
+            .movie {
+                position: relative;
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
-    }
-
-    .movieCard {
-        display: grid;
-        grid-template-rows: 1fr auto;
+        .moviePoster {
+            box-shadow: 0px 0px 3px 3px #000;
+            max-width: 100%;
+            display: block;
+            height: 100%;
+            object-fit: cover;
+        }
+        .title  {
+            text-align: center;
+            padding: 5%;
+        }
     }
 }
 
-
-
+.galleryButtonContainer {
+    margin: 5% auto;
+    display: none;
+    color: $secondary-color;
+    a {
+        @include clickableStyle;
+        margin: 5px;
+        color: #000;
+    }
+    i {
+        margin-left: 5px;
+    }
+    &.unhidden {
+        display: flex;
+    }
+}
